# levelmoney-api

./: levelmoney.cabal
app/: Main.hs
src/: LevelMoney.hs
src/FatLoginResponse/: Account.hs  AccountType.hs  AggErrorInfo.hs  AggErrorStatus.hs  AutosaveData.hs  AutosaveStatus.hs  Bucket.hs  BucketType.hs  BucketedTransactionsCard.hs  CacheContents.hs  CancelledScheduledTransferCard.hs  Card.hs  CardFlag.hs  CardType.hs  ClearedScheduledTransferCard.hs  DisplayCard.hs  DisplayStyle.hs  DisplayType.hs  Error.hs  Events.hs  ExplainerCard.hs  ExplainerType.hs  FatLoginError.hs  FatLoginResponse.hs  FeatureFlags.hs  GenericTextCard.hs  NormieCard.hs  PendingScheduledTransferCard.hs  ScheduledTransfer.hs  SuggestedAddToExistingBucketCard.hs  SuggestedTransactionCard.hs  SummaryCard.hs  Transaction.hs  TransferCard.hs  TransferStatus.hs  UpcomingScheduledTransferCard.hs  User.hs  UserAgent.hs
src/LevelMoney/: Account.hs  AccountType.hs  AggErrorInfo.hs  AggErrorStatus.hs  Args.hs  AutosaveData.hs  AutosaveStatus.hs  Bucket.hs  BucketType.hs  BucketedTransactionsCard.hs  CacheContents.hs  CallerInfo.hs  CancelledScheduledTransferCard.hs  Card.hs  CardFlag.hs  CardType.hs  ClearedScheduledTransferCard.hs  DisplayCard.hs  DisplayStyle.hs  DisplayType.hs  Error.hs  Events.hs  ExplainerCard.hs  ExplainerType.hs  FatLoginError.hs  FatLoginResponse.hs  FeatureFlags.hs  GenericTextCard.hs  GetCacheContentsError.hs  GetCacheContentsRequest.hs  GetCacheContentsResponse.hs  LoginRequest.hs  NormieCard.hs  PendingScheduledTransferCard.hs  ScheduledTransfer.hs  SuggestedAddToExistingBucketCard.hs  SuggestedTransactionCard.hs  SummaryCard.hs  Transaction.hs  TransferCard.hs  (+4 more)
