name:                levelmoney
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/githubuser/levelmoney#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2016 Author name here
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     LevelMoney.Account
                     , LevelMoney.AccountType
                     , LevelMoney.AggErrorInfo
                     , LevelMoney.AggErrorStatus
                     , LevelMoney.Args
                     , LevelMoney.AutosaveData
                     , LevelMoney.AutosaveStatus
                     , LevelMoney.BucketedTransactionsCard
                     , LevelMoney.Bucket
                     , LevelMoney.BucketType
                     , LevelMoney.CacheContents
                     , LevelMoney.CallerInfo
                     , LevelMoney.CancelledScheduledTransferCard
                     , LevelMoney.CardFlag
                     , LevelMoney.Card
                     , LevelMoney.CardType
                     , LevelMoney.ClearedScheduledTransferCard
                     , LevelMoney.DisplayCard
                     , LevelMoney.DisplayStyle
                     , LevelMoney.DisplayType
                     , LevelMoney.Error
                     , LevelMoney.Events
                     , LevelMoney.ExplainerCard
                     , LevelMoney.ExplainerType
                     , LevelMoney.FatLoginError
                     , LevelMoney.FatLoginResponse
                     , LevelMoney.FeatureFlags
                     , LevelMoney.GenericTextCard
                     , LevelMoney.GetCacheContentsError
                     , LevelMoney.GetCacheContentsRequest
                     , LevelMoney.GetCacheContentsResponse
                     , LevelMoney.LoginRequest
                     , LevelMoney.NormieCard
                     , LevelMoney.PendingScheduledTransferCard
                     , LevelMoney.ScheduledTransfer
                     , LevelMoney.SuggestedAddToExistingBucketCard
                     , LevelMoney.SuggestedTransactionCard
                     , LevelMoney.SummaryCard
                     , LevelMoney.Transaction
                     , LevelMoney.TransferCard
                     , LevelMoney.TransferStatus
                     , LevelMoney.UpcomingScheduledTransferCard
                     , LevelMoney.UserAgent
                     , LevelMoney.User
  build-depends:       base >= 4.7 && < 5
                     , protocol-buffers
  default-language:    Haskell2010

executable levelmoney-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , levelmoney
                     , protocol-buffers
                     , bytestring
                     , pretty-show
  default-language:    Haskell2010

test-suite levelmoney-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , levelmoney
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/levelmoney
